--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dabih-api",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Dabih API Server",
   "main": "app.js",
   "repository": "",
@@ -10,6 +10,10 @@
     "rootKey": "node ./src/scripts/rootKey.js",
     "prod": "NODE_ENV=production node app.js"
   },
+  "workspaces": [
+    ".",
+    "client"
+  ],
   "type": "module",
   "author": "mhuttner",
   "license": "MIT",
