--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ FROM base AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-COPY package.json package-lock.json .npmrc ./ 
+COPY package.json package-lock.json ./ 
 RUN npm ci
 
 # Rebuild the source code only when needed
