--- a/config.yaml
+++ b/config.yaml
@@ -12,14 +12,14 @@ crypto:
 
 # Configure where to store temporary data
 ephemeral:
-  adapter: 'memory'
+  adapter: memory
 
 database:
   dialect: sqlite
   logging: false 
   storage: ./data/dabih.sqlite
 
-
 storage:
   backend: local
   path: ./data 
+
