--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "repository": "",
   "scripts": {
-    "start": "node --watch app.js",
+    "start": "CONFIG=dev/config.yaml node --watch app.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "rootKey": "node ./src/scripts/rootKey.js",
     "prod": "NODE_ENV=production node app.js"
@@ -39,6 +39,7 @@
     "p-limit": "^4.0.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.4",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   }
