change logging, combined dev command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "repository": "",
   "scripts": {
-    "start": "CONFIG=dev/config.yaml node --watch app.js",
+    "start": "npm run api & npm run client",
+    "api": "CONFIG=dev/config.yaml node --watch app.js",
+    "client": "(cd client && npm start)",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "rootKey": "node ./src/scripts/rootKey.js",
     "prod": "NODE_ENV=production node app.js"
