--- a/.github/workflows/publish-docker-image-client.yaml
+++ b/.github/workflows/publish-docker-image-client.yaml
@@ -16,14 +16,14 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          username: ${{ secrets.DOCKER_SPANG_LAB}}
+          password: ${{ secrets.DOCKER_TOKEN_SPANG_LAB }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: mhuttner/dabih-client
+          images: thespanglab/dabih-client
       
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
