--- a/client/package.json
+++ b/client/package.json
@@ -10,35 +10,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.10",
-    "axios": "^1.3.2",
-    "next": "13.1.6",
-    "next-auth": "4.19.2",
+    "@headlessui/react": "^1.7.15",
+    "axios": "^1.4.0",
+    "next": "13.4.4",
+    "next-auth": "4.22.1",
     "p-limit": "^4.0.0",
     "qr-scanner": "github:nimiq/qr-scanner#pull/191/head",
-    "qrcode": "^1.5.1",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
-    "react-to-print": "^2.14.11",
-    "sharp": "^0.31.3"
+    "react-to-print": "^2.14.13",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.33.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "13.4.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   },
   "overrides": {
     "next-auth": {
-      "next": "13.1.6"
+      "next": "13.4.4"
     }
   }
 }
