--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   "devDependencies": {
     "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-github": "^4.8.0",
+    "eslint-plugin-github": "^4.9.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.5.0"
+    "jest": "^29.6.1"
   },
   "dependencies": {
     "@fastify/busboy": "^1.2.1",
@@ -42,6 +42,7 @@
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.7",
+    "samba-client": "^7.2.0",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
