--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,13 +1,25 @@
 {
-  "extends": ["next/core-web-vitals", "airbnb"],
-  "plugins": ["unused-imports"],
+  "extends": [
+    "next/core-web-vitals",
+    "airbnb"
+  ],
+  "plugins": [
+    "unused-imports"
+  ],
   "rules": {
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js"
+        ]
+      }
+    ],
     "no-unused-vars": "off", // or "@typescript-eslint/no-unused-vars": "off",
-    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-imports": "off",
     "unused-imports/no-unused-vars": [
       "warn",
       {
