--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@fastify/busboy": "^1.2.1",
     "@koa/router": "^12.0.0",
+    "cls-hooked": "^4.2.2",
     "crc-32": "^1.2.2",
     "js-yaml": "^4.1.0",
     "koa": "^2.14.2",
