--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "cls-hooked": "^4.2.2",
     "ldapjs": "^3.0.4",
+    "lodash-es": "^4.17.21",
     "next": "13.4.12",
     "next-auth": "4.22.3",
     "p-limit": "^4.0.0",
