--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "ldapjs": "^3.0.4",
+    "lodash-es": "^4.17.21",
     "lru-cache": "^10.0.0",
     "memcached": "^2.2.2",
     "node-schedule": "^2.1.1",
