--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,10 +11,12 @@ edition = "2021"
 anyhow = "1.0.72"
 clap = { version = "4.3.21", features = ["derive"] }
 crypto = "0.5.1"
+home = "0.5.5"
 inquire = "0.6.2"
 openssl = "0.10.56"
-reqwest = "0.11.18"
+reqwest = { version = "0.11.18", features = ["json"] }
 serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.104"
 serde_yaml = "0.9.25"
 tokio = { version = "1.29.1", features = ["full"] }
 url = "2.4.0"
