--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,7 +4,7 @@ description = "Command Line Interface for dabih"
 authors = ["Michael Huttner<michael@mhuttner.com>"]
 version = "1.4.9"
 edition = "2021"
-licence = "MIT"
+license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/spang-lab/dabih"
 repository = "https://github.com/spang-lab/dabih"
