--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "sharp": "^0.32.4"
   },
   "devDependencies": {
+    "@types/react": "18.2.21",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
