--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,11 +1,6 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "airbnb"
-  ],
-  "plugins": [
-    "unused-imports"
-  ],
+  "extends": ["next/core-web-vitals", "airbnb"],
+  "plugins": ["unused-imports"],
   "rules": {
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
@@ -13,9 +8,7 @@
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js"
-        ]
+        "extensions": [".js", ".ts", ".tsx"]
       }
     ],
     "no-unused-vars": "off", // or "@typescript-eslint/no-unused-vars": "off",
