--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.19",
+    "@types/mdx": "^2.0.7",
     "axios": "^1.4.0",
     "cls-hooked": "^4.2.2",
+    "highlight.js": "^11.8.0",
     "ldapjs": "^3.0.4",
     "lodash-es": "^4.17.21",
     "next": "13.4.12",
@@ -25,6 +30,7 @@
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "react-to-print": "^2.14.13",
+    "rehype-highlight": "^6.0.0",
     "sharp": "^0.32.4"
   },
   "devDependencies": {
