--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -28,7 +28,7 @@ flate2 = "1.0.27"
 glob = "0.3.1"
 home = "0.5.5"
 inquire = "0.6.2"
-openssl = "0.10.56"
+openssl = { version ="0.10.56", features=["vendored"] }
 pbr = "1.1.1"
 reqwest = { version = "0.11.18", features = ["json", "multipart"] }
 serde = { version = "1.0.183", features = ["derive"] }
