--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -6,6 +6,25 @@ on:
       - "v*"
 
 jobs:
+  windows_binary:
+    name: Windows Binary
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Install the windows toolchain.
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-pc-windows-gnu
+          override: true
+      - name: Build the package
+        uses: actions-rs/cargo@v1
+        working-directory: ./cli
+        with:
+          use-cross: true
+          command: build
+          args: --target x86_64-pc-windows-gnu
   publish:
     name: Publish
     runs-on: ubuntu-latest
