--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -1,5 +1,9 @@
 name: Publish Crates.io cli crate
 
+defaults:
+  run:
+    working-directory: cli
+
 on:
   push:
     tags:
@@ -21,7 +25,6 @@ jobs:
       - name: Build the package
         uses: actions-rs/cargo@v1
         with:
-          working-directory: ./cli
           use-cross: true
           command: build
           args: --target x86_64-pc-windows-gnu
@@ -40,7 +43,6 @@ jobs:
           override: true
 
       - name: Cargo publish
-        working-directory: ./cli
         run: cargo publish --token ${CRATES_TOKEN}
         env:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
