--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -11,14 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target:
-          [
+        target: [
             x86_64-unknown-linux-gnu,
             x86_64-unknown-linux-musl,
             x86_64-pc-windows-gnu,
-            x86_64-apple-darwin,
-            aarch64-apple-darwin,
-            aarch64-pc-windows-msvc,
+            #x86_64-apple-darwin,
+            #aarch64-apple-darwin,
+            #aarch64-pc-windows-msvc,
           ]
 
     steps:
