--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "next": "13.4.19",
     "next-auth": "4.23.1",
     "p-limit": "^4.0.0",
-    "qr-scanner": "github:nimiq/qr-scanner#pull/191/head",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
