--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash-es": "^4.17.21",
     "lru-cache": "^10.0.1",
     "memcached": "^2.2.2",
+    "multistream": "^4.1.0",
     "node-schedule": "^2.1.1",
     "p-limit": "^4.0.0",
     "pg": "^8.11.3",
