--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "sharp": "^0.32.5"
   },
   "devDependencies": {
+    "@types/ldapjs": "^3.0.2",
     "@types/react": "18.2.21",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.48.0",
