change client build

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,36 +1,25 @@
-FROM node:18-alpine AS base
 
-FROM base AS deps
+FROM node:18-alpine
+
 RUN apk add --no-cache libc6-compat
-WORKDIR /app
 
-COPY package.json package-lock.json ./ 
-RUN npm ci
-
-# Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-
-ENV NEXT_TELEMETRY_DISABLED 1
-
-RUN npm run build
-
-# Production image, copy all the files and run next
-FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 
+COPY package.json package-lock.json ./ 
+RUN npm ci
+
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-COPY --from=builder /app/public ./public
+COPY . .
 
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# Create and give access to folders and files that will be edited during build time
+RUN mkdir -p .next
+RUN touch next-env.d.ts
+RUN chmod -R ugo+rwX .next next-env.d.ts
 
 USER nextjs
 
@@ -38,4 +27,4 @@ EXPOSE 3000
 
 ENV PORT 3000
 
-CMD ["node", "server.js"]
+ENTRYPOINT ["/bin/sh", "-c", "npm run build && npm run prod"]
