--- a/.github/workflows/publish-tauri-app.yaml
+++ b/.github/workflows/publish-tauri-app.yaml
@@ -29,7 +29,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       - name: install frontend dependencies
-        run: npm install # change this to npm or pnpm depending on which one you use
+        run: |
+          cd tauri
+          npm install # change this to npm or pnpm depending on which one you use
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
