fix windows errors

--- a/tauri/.eslintrc
+++ b/tauri/.eslintrc
@@ -19,6 +19,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "linebreak-style": "off",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
