fix release names

--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -49,6 +49,7 @@ jobs:
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
+          name: Dabih CLI
           files: "cli/dabih*"
   publish:
     name: Publish
