--- a/tauri/src-tauri/Cargo.toml
+++ b/tauri/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "app"
+name = "dabih"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+description = "Dabih Uploader"
+authors = ["Michael Huttner"]
+license = "MIT"
+repository = "https://github.com/spang-lab/dabih"
 default-run = "app"
 edition = "2021"
 rust-version = "1.60"
