--- a/tauri/src-tauri/Cargo.toml
+++ b/tauri/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [ "http-all", "path-all", "window-all", "dialog-open", "fs-all"] }
+tauri = { version = "1.4.0", features = [ "fs-read-dir", "fs-exists", "fs-write-file", "fs-create-dir", "fs-read-file", "http-all", "dialog-open"] }
 anyhow = "1.0.72"
 base64 = "0.21.2"
 sha256 = "1.4.0"
