--- a/.github/workflows/publish-tauri-app.yaml
+++ b/.github/workflows/publish-tauri-app.yaml
@@ -40,5 +40,5 @@ jobs:
           tagName: dabih-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
           releaseName: 'Dabih Uploader v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true
+          releaseDraft: false 
           prerelease: false
