--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -39,3 +39,4 @@ zip = "0.6.6"
 openssh = { version = "0.10.0", optional = true }
 openssh-sftp-client = {version = "0.14.0", optional = true }
 sha2 = "0.10.7"
+clap_complete = "4.4.1"
