--- a/tauri/package.json
+++ b/tauri/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@tauri-apps/api": "^1.4.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
