--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -10,12 +10,12 @@ jobs:
     strategy:
       matrix:
         os:
-          - { name: linux, target: x86_64-unknown-linux-gnu }
-          - { name: macos, target: x86_64-apple-darwin }
-          - { name: arm_macos, target: aarch64-apple-darwin }
-          - { name: windows, target: x86_64-pc-windows-gnu }
+          - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu }
+          - { runner: macos-latest, name: macos, target: x86_64-apple-darwin }
+          - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin }
+          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-gnu }
 
-    runs-on: ${{ matrix.os.name }}
+    runs-on: ${{ matrix.os.runner }}
 
     steps:
     - name: Checkout code
