--- a/tauri/package.json
+++ b/tauri/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "js-yaml": "^4.1.0",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
