--- a/tauri/src-tauri/Cargo.toml
+++ b/tauri/src-tauri/Cargo.toml
@@ -29,7 +29,7 @@ zip = "0.6.6"
 thiserror = "1.0.48"
 glob = "0.3.1"
 sha2 = "0.10.7"
-dabih = "1.10.20"
+dabih = { path = "../../cli"}
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
