--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -10,10 +10,10 @@ jobs:
     strategy:
       matrix:
         os:
-          - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu }
-          - { runner: macos-latest, name: macos, target: x86_64-apple-darwin }
-          - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin }
-          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-gnu }
+          - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu, shell: bash }
+          - { runner: macos-latest, name: macos, target: x86_64-apple-darwin, shell: bash}
+          - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin, shell: bash }
+          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-gnu, shell: msys2 }
 
     runs-on: ${{ matrix.os.runner }}
 
@@ -27,7 +27,16 @@ jobs:
         toolchain: stable
         target: ${{matrix.os.target}}
 
+    - name: Setup MSYS2 on Windows
+      if: matrix.runner == 'windows-latest'
+      uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        msystem: UCRT64
+
+
     - name: Build CLI for ${{ matrix.os.target }}
+      shell: ${{ matrix.os.shell }}
       run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
 
     - name: Archive Artifact
