--- a/.github/workflows/publish-cli-crate.yaml
+++ b/.github/workflows/publish-cli-crate.yaml
@@ -10,10 +10,10 @@ jobs:
     strategy:
       matrix:
         os:
-          - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu, shell: bash }
-          - { runner: macos-latest, name: macos, target: x86_64-apple-darwin, shell: bash}
-          - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin, shell: bash }
-          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-gnu, shell: msys2 }
+          - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu }
+          - { runner: macos-latest, name: macos, target: x86_64-apple-darwin }
+          - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin }
+          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-gnu }
 
     runs-on: ${{ matrix.os.runner }}
 
@@ -33,10 +33,10 @@ jobs:
       with:
         update: true
         msystem: UCRT64
+        install: perl
 
 
     - name: Build CLI for ${{ matrix.os.target }}
-      shell: ${{ matrix.os.shell }}
       run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
 
     - name: Archive Artifact
