--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -93,11 +93,10 @@ jobs:
         toolchain: stable
         target: ${{matrix.os.target}}
 
-    - uses: shogo82148/actions-setup-perl@v1
+            
+    - name: Use strawberry perl
       if: matrix.os.runner == 'windows-latest'
-      with:
-        perl-version: '5.32'
-        distribution: strawberry
+      run: echo OPENSSL_SRC_PERL=C:/Strawberry/perl/bin/perl >> $GITHUB_ENV
 
     - name: Build CLI for ${{ matrix.os.target }}
       run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
