--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -22,6 +22,8 @@ jobs:
       - name: get version
         run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
       - name: create release
+        env:
+          TAG: ${{ github.ref }}
         id: create-release
         uses: actions/github-script@v6
         with:
@@ -29,8 +31,8 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `app-v${process.env.PACKAGE_VERSION}`,
-              name: `Dabih v${process.env.PACKAGE_VERSION}`,
+              tag_name: `${process.env.TAG}`,
+              name: `Dabih v${process.env.TAG}`,
               body: 'Download dabih binaries here.',
               draft: true,
               prerelease: false
@@ -108,10 +110,10 @@ jobs:
         cd cli
         if [[ "${{ matrix.os.name }}" == "windows" ]]; then
           7z a -tzip dabih_${{ matrix.os.name }}.zip target/${{ matrix.os.target }}/release/dabih.exe
-          gh release upload  ${{ needs.create-release.outputs.release_id }} dabih_${{ matrix.os.name }}.zip
+          gh release upload  ${{ github.ref }} dabih_${{ matrix.os.name }}.zip
         else
           tar czf dabih_${{ matrix.os.name }}.tar.gz -C target/${{ matrix.os.target }}/release .
-          gh release upload  ${{ needs.create-release.outputs.release_id }} dabih_${{ matrix.os.name }}.tar.gz
+          gh release upload  ${{ github.ref }} dabih_${{ matrix.os.name }}.tar.gz
         fi
         cd -
 
