--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -81,7 +81,7 @@ jobs:
           - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu }
           - { runner: macos-latest, name: macos, target: x86_64-apple-darwin }
           - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin }
-          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-gnu }
+          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-msvc}
 
     runs-on: ${{ matrix.os.runner }}
 
