--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.19",
-    "@types/mdx": "^2.0.7",
-    "axios": "^1.5.0",
+    "@headlessui/react": "^1.7.18",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.1.0",
+    "@types/mdx": "^2.0.10",
+    "axios": "^1.6.6",
     "cls-hooked": "^4.2.2",
-    "highlight.js": "^11.8.0",
-    "ldapjs": "^3.0.5",
+    "highlight.js": "^11.9.0",
+    "ldapjs": "^3.0.7",
     "lodash-es": "^4.17.21",
-    "next": "13.4.19",
-    "next-auth": "4.23.1",
+    "next": "14.1.0",
+    "next-auth": "4.24.5",
     "p-limit": "^4.0.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.3",
@@ -29,30 +29,26 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
-    "react-to-print": "^2.14.13",
-    "rehype-highlight": "^6.0.0",
-    "sharp": "^0.32.5"
+    "react-to-print": "^2.14.15",
+    "rehype-highlight": "^7.0.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
-    "@types/ldapjs": "^3.0.2",
-    "@types/react": "18.2.21",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.48.0",
+    "@types/ldapjs": "^3.0.6",
+    "@types/react": "18.2.48",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.4.19",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   },
-  "overrides": {
-    "next-auth": {
-      "next": "13.4.19"
-    }
-  },
+  "overrides": {},
   "browser": {
     "fs": false,
     "os": false,
