--- a/.github/workflows/publish-docker.yaml
+++ b/.github/workflows/publish-docker.yaml
@@ -1,10 +1,9 @@
-name: Publish Full Image
+name: Publish dabih Image
 
 on:
   push:
-    branches:
-      - main
-
+    tags:
+      - "v*"
 
 jobs:
   full_image:
