--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "1.13.2",
   "private": true,
   "scripts": {
-    "dev": "PORT=8080 next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "PORT=8080 next dev",
+    "start": "next dev",
     "prod": "NODE_ENV=production next start",
     "lint": "next lint"
   },
