move root keys to ui

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -19,6 +19,9 @@ database:
   dialect: sqlite
   logging: false
   storage: ./data/dabih.sqlite
+  retry:
+    max: 10
+  
 
 storage:
   backend: local
