--- a/.github/workflows/build_release.yaml
+++ b/.github/workflows/build_release.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: 20
       - name: get version
-        run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+        run: echo "PACKAGE_VERSION=$(node -p "require('./api/package.json').version")" >> $GITHUB_ENV
       - name: create release
         env:
           TAG: ${{ github.ref }}
@@ -78,45 +78,56 @@ jobs:
     strategy:
       matrix:
         os:
-          - { runner: ubuntu-latest, name: linux, target: x86_64-unknown-linux-gnu }
+          - {
+              runner: ubuntu-latest,
+              name: linux,
+              target: x86_64-unknown-linux-gnu,
+            }
           - { runner: macos-latest, name: macos, target: x86_64-apple-darwin }
-          - { runner: macos-latest, name: arm_macos, target: aarch64-apple-darwin }
-          - { runner: windows-latest, name: windows, target: x86_64-pc-windows-msvc}
+          - {
+              runner: macos-latest,
+              name: arm_macos,
+              target: aarch64-apple-darwin,
+            }
+          - {
+              runner: windows-latest,
+              name: windows,
+              target: x86_64-pc-windows-msvc,
+            }
 
     runs-on: ${{ matrix.os.runner }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Setup Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        target: ${{matrix.os.target}}
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{matrix.os.target}}
 
-            
-    - name: Use strawberry perl
-      if: matrix.os.runner == 'windows-latest'
-      run: echo OPENSSL_SRC_PERL=C:/Strawberry/perl/bin/perl >> $GITHUB_ENV
+      - name: Use strawberry perl
+        if: matrix.os.runner == 'windows-latest'
+        run: echo OPENSSL_SRC_PERL=C:/Strawberry/perl/bin/perl >> $GITHUB_ENV
 
-    - name: Build CLI for ${{ matrix.os.target }}
-      run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
+      - name: Build CLI for ${{ matrix.os.target }}
+        run: cargo build --manifest-path cli/Cargo.toml --release --target ${{ matrix.os.target }}
 
-    - name: Archive and upload Artifact
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      shell: bash
-      run: |
-        cd cli
-        if [[ "${{ matrix.os.name }}" == "windows" ]]; then
-          7z a -tzip dabih_cli_${{ matrix.os.name }}.zip target/${{ matrix.os.target }}/release/dabih.exe
-          gh release upload  ${{ github.ref }} dabih_cli_${{ matrix.os.name }}.zip
-        else
-          tar czf dabih_cli_${{ matrix.os.name }}.tar.gz -C target/${{ matrix.os.target }}/release .
-          gh release upload  ${{ github.ref }} dabih_cli_${{ matrix.os.name }}.tar.gz
-        fi
-        cd -
+      - name: Archive and upload Artifact
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        run: |
+          cd cli
+          if [[ "${{ matrix.os.name }}" == "windows" ]]; then
+            7z a -tzip dabih_cli_${{ matrix.os.name }}.zip target/${{ matrix.os.target }}/release/dabih.exe
+            gh release upload  ${{ github.ref }} dabih_cli_${{ matrix.os.name }}.zip
+          else
+            tar czf dabih_cli_${{ matrix.os.name }}.tar.gz -C target/${{ matrix.os.target }}/release .
+            gh release upload  ${{ github.ref }} dabih_cli_${{ matrix.os.name }}.tar.gz
+          fi
+          cd -
 
   publish-release:
     permissions:
