--- a/api/package.json
+++ b/api/package.json
@@ -30,7 +30,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@fastify/busboy": "^2.1.0",
+    "@fastify/busboy": "^2.1.1",
     "@koa/router": "^12.0.1",
     "cls-hooked": "^4.2.2",
     "crc-32": "^1.2.2",
@@ -49,6 +49,7 @@
     "redis": "^4.6.13",
     "samba-client": "^7.2.0",
     "sequelize": "^6.37.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "umzug": "^3.7.0"
   }
 }
