--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mdx": "^2.0.11",
     "axios": "^1.6.7",
     "cls-hooked": "^4.2.2",
     "highlight.js": "^11.9.0",
+    "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
     "lodash-es": "^4.17.21",
     "next": "14.1.0",
