--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "cls-hooked": "^4.2.2",
     "crc-32": "^1.2.2",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
     "ldapjs": "^3.0.7",
