--- a/api/package.json
+++ b/api/package.json
@@ -31,11 +31,14 @@
   },
   "dependencies": {
     "@fastify/busboy": "^2.1.1",
+    "@keyv/memcache": "^1.4.1",
+    "@keyv/redis": "^2.8.4",
     "@koa/router": "^12.0.1",
     "cls-hooked": "^4.2.2",
     "crc-32": "^1.2.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "keyv": "^4.5.4",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
     "ldapjs": "^3.0.7",
