--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next dev",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "test": "jest",
     "prod": "NODE_ENV=production next start",
     "lint": "next lint"
   },
@@ -38,6 +38,9 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/ldapjs": "^3.0.6",
     "@types/react": "18.2.58",
     "autoprefixer": "^10.4.17",
@@ -50,8 +53,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2"
   },
   "overrides": {},
   "browser": {
