--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^1.7.18",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.0",
+    "@next/mdx": "^14.1.3",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mdx": "^2.0.11",
     "axios": "^1.6.7",
@@ -23,8 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
     "lodash-es": "^4.17.21",
-    "next": "14.1.0",
-    "next-auth": "4.24.6",
+    "next": "14.1.3",
+    "next-auth": "4.24.7",
     "p-limit": "^4.0.0",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.3",
@@ -43,16 +43,18 @@
     "@types/jest": "^29.5.12",
     "@types/ldapjs": "^3.0.6",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "18.2.58",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "@types/react": "18.2.66",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "^14.1.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.35",
