--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "repository": "",
   "scripts": {
-    "start": "node --watch app.js",
+    "start": "node --watch src/server.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "prod": "NODE_ENV=production node app.js"
   },
