--- a/next/package.json
+++ b/next/package.json
@@ -16,13 +16,10 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.4",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mdx": "^2.0.11",
-    "axios": "^1.6.8",
-    "cls-hooked": "^4.2.2",
+    "@types/mdx": "^2.0.12",
     "highlight.js": "^11.9.0",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
-    "lodash-es": "^4.17.21",
     "next": "14.1.4",
     "next-auth": "4.24.7",
     "qr-scanner": "^1.4.2",
@@ -33,8 +30,7 @@
     "react-feather": "^2.0.10",
     "react-to-print": "^2.15.1",
     "rehype-highlight": "^7.0.0",
-    "remark-frontmatter": "^5.0.0",
-    "sharp": "^0.33.2"
+    "remark-frontmatter": "^5.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -42,10 +38,10 @@
     "@types/jest": "^29.5.12",
     "@types/ldapjs": "^3.0.6",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "18.2.67",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
-    "autoprefixer": "^10.4.18",
+    "@types/react": "18.2.74",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -56,9 +52,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.37",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "overrides": {},
   "browser": {
