--- a/api/package.json
+++ b/api/package.json
@@ -5,20 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --import tsx/esm src/server.ts",
-    "prod": "NODE_ENV=production node --import tsx/esm src/server.ts",
-    "build": "tsoa spec-and-routes --basePath /api/v1",
-    "build:start": "npm run build && npm run start",
-    "doc": "redocly build-docs -o ./build/index.html ./build/swagger.json",
-    "test:migrate": "DB_URL=\"file:../data/test.sqlite\" prisma migrate dev",
-    "test": "DB_URL=file:../data/test.sqlite ava",
-    "client": "openapi-ts",
-    "migrate": "DB_URL=\"file:../data/dabih.sqlite\" prisma migrate dev"
+    "build:tsoa": "tsoa spec-and-routes --basePath /api/v1",
+    "build:docs": "redocly build-docs -o ./build/index.html ./build/swagger.json",
+    "build:client": "openapi-typescript ./build/swagger.json -o ./build/api/v1.d.ts",
+    "build": "npm run build:tsoa && npm run build:docs && npm run build:client",
+    "dev:start": "dotenv -e .env.dev -- node --import tsx/esm src/server.ts",
+    "dev": "npm run build && npm run dev:start",
+    "dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
+    "test": "dotenv -e .env.test ava",
+    "test:migrate": "dotenv -e .env.test prisma migrate dev"
   },
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@hey-api/openapi-ts": "^0.36.0",
     "@types/eslint": "^8.56.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
@@ -27,10 +26,12 @@
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "ava": "^6.1.2",
+    "dotenv-cli": "^7.4.1",
     "eslint": "^8.56.7",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "openapi-typescript": "^7.0.0-next.8",
     "prisma": "^5.12.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4",
@@ -43,10 +44,12 @@
     "@prisma/client": "^5.12.1",
     "@redocly/cli": "^1.11.0",
     "crc": "^4.3.2",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
     "koa": "^2.15.2",
     "koa-body": "^6.0.1",
+    "openapi-fetch": "^0.9.3",
     "tsoa": "^6.2.0",
     "winston": "^3.13.0"
   },
