--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "typescript-eslint": "^7.5.0"
   },
   "dependencies": {
+    "@ava/get-port": "^2.0.0",
     "@keyv/memcache": "^1.4.1",
     "@keyv/redis": "^2.8.4",
     "@koa/router": "^12.0.1",
