--- a/api/package.json
+++ b/api/package.json
@@ -13,29 +13,30 @@
     "dev": "npm run build && npm run dev:start",
     "dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "test": "dotenv -e .env.test ava",
-    "test:migrate": "dotenv -e .env.test prisma migrate dev"
+    "test:migrate": "dotenv -e .env.test prisma migrate dev",
+    "test:reset": "dotenv -e .env.test prisma migrate reset"
   },
   "author": "Michael Huttner",
   "license": "MIT",
   "devDependencies": {
-    "@types/eslint": "^8.56.7",
+    "@types/eslint": "^8.56.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa__router": "^12.0.4",
-    "@types/node": "^20.12.5",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@types/node": "^20.12.7",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "ava": "^6.1.2",
     "dotenv-cli": "^7.4.1",
-    "eslint": "^8.56.7",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.29.1",
     "openapi-typescript": "^7.0.0-next.8",
     "prisma": "^5.12.1",
     "tsx": "^4.7.2",
-    "typescript": "^5.4.4",
-    "typescript-eslint": "^7.5.0"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.6.0"
   },
   "dependencies": {
     "@ava/get-port": "^2.0.0",
@@ -48,7 +49,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
-    "koa": "^2.15.2",
+    "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "openapi-fetch": "^0.9.3",
     "tsoa": "^6.2.0",
